# 36120-25SP-AT3-group01-gowtham-solana-api

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
models/: tuned_elasticnet_model.joblib
