[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "app"
version = "0.0.1"
description = "FastAPI for Solana next-day HIGH price prediction (AT3)"
authors = [
  { name = "Gowtham Kamasamudra Prasanna" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["app"]
include = ["pyproject.toml", "app/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

